--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<section class="hero is-medium"> 
+<!--<section class="hero is-medium"> 
 <div class="hero-body has-background-white"> 
 <div class="container has-text-centered"> 
 <div class="column is-6 is-offset-3"> 
@@ -13,6 +13,314 @@
 </section>
 <section class"container"> 
 <div class="hero-body has-background-white"> 
+<div class="columns features"> 
+<div class="column is-4"> 
+<div class="card is-shady"> 
+<div class="card-content"> 
+<div class="content"> 
+<h4>Giao diện tối giản và thân thiện.</h4>
+<p>blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah.</p>
+</div>
+</div>
+</div>
+</div>
+<div class="column is-4"> 
+<div class="card is-shady"> 
+<div class="card-content"> 
+<div class="content"> 
+<h4>Trình soạn thảo trực tuyến hiện đại.</h4>
+<p>blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah.</p>
+</div>
+</div>
+</div>
+</div>
+<div class="column is-4"> 
+<div class="card is-shady"> 
+<div class="card-content"> 
+<div class="content"> 
+<h4>Nhiều dịch vụ bổ trợ.</h4>
+<p>blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah.</p>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="columns features"> 
+<div class="column is-4"> 
+<div class="card is-shady"> 
+<div class="card-content"> 
+<div class="content"> 
+<h4>Tối ưu hóa quá trình tuyển dụng.</h4> 
+<p>blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah.</p>
+</div>
+</div>
+</div>
+</div>
+<div class="column is-4"> 
+<div class="card is-shady"> 
+<div class="card-content"> 
+<div class="content"> 
+<h4>Nhanh chóng tìm được việc làm.</h4> 
+<p>blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah.</p>
+</div>
+</div>
+</div>
+</div>
+<div class="column is-4"> 
+<div class="card is-shady"> 
+<div class="card-content"> 
+<div class="content"> 
+<h4>Hoàn toàn miễn phí.</h4> 
+<p>blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah.</p>
+</div>
+</div>
+</div>
+</div>
+</div>
+<br>
+<div class="intro column is-8 is-offset-2 has-text-centered"> 
+<h3 class="title is-3">Hoàn hảo dành cho học sinh, sinh viên đang tìm kiếm việc làm.</h3>
+<p class="subtitle is-5">Blah blah blah blah blah blah blah blah blah blah blah. Blah blah blah blah blah blah blah blah blah blah blah blah blah blah.</p>
+</div>
+<br>
+</div>
+</section>-->
+<section class="hero">
+    <div class="hero-body">
+        <div class="container">
+            <div class="columns">
+                <div class="column is-6">
+                    <h1 class="title is-1 has-text-left">
+                        Jobpify
+                    </h1>
+                    <h3 class="subtitle is-3 has-text-left">
+                        Nền tảng kết nối học sinh, sinh viên với các cơ hội việc làm.
+                    </h3>
+                    <a class="button is-medium is-link" href="/jobs">
+                            <strong>
+                                Tìm việc làm ngay!
+                            </strong>
+                        </a>
+                    <span class="help">Hoặc đi đến trang <a href="users/sign_up">đăng ký</a> để tạo tài khoản</span>
+                </div>
+                <div class="column is-6">
+                    <img src="/images/fow.png" alt="rss feed" />
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
+
+<section class="hero is-link is-bold">
+    <div class="hero-body">
+        <div class="container">
+            <div class="columns">
+                <div class="column is-5 is-offset-1">
+                    <img src="/images/stu.png" alt="rss feed" width="65%" />
+                </div>
+                <div class="column is-5">
+                    <h3 class="title is-3">
+                        Câu hỏi gì đó liên quan tới vấn đề tìm việc làm ở học sinh, sinh viên?
+                    </h3>
+                    <p></p>
+                    <h4 class="subtitle is-4">
+                        Blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah 
+                        blah blah blah blah blah blah blah blah blah.
+                    </h4>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<div class="section" id="pricing" style="color: black; margin-top: -20px; border-bottom: 1px solid lightgrey;">
+    <div class="container">
+       <h3 class="title is-3 has-text-centered">
+            Tài khoản
+        </h3>
+        <div class="item columns" style="margin-top: 20px;">
+
+            <div class="column is-3">
+
+                <div style="padding: 10px 10px 10px 10px; border: 1px solid gray; border-radius: 5px;">
+
+                    <nav class="level">
+                        <div class="level-item">
+                            <p style="text-align: center; font-weight: bold; color: #2d3436">FREE PLAN</p>
+                        </div>
+                    </nav>
+
+                    <nav class="level">
+
+                        <div class="level-item">
+                            <p style="text-align: center; font-size: 28px; font-weight: bold; color: #25c151">
+                                $0 <span style="color: gray; font-weight: normal; font-size: 20px;">/month</span>
+                            </p>
+                        </div>
+                    </nav>
+
+                    <p style="text-align: center; font-size: 18px;">
+                        5 monitors<br>
+                        1 users<br>
+                        Email alerts<br>
+                        <br>
+                    </p>
+
+                    <nav class="level" style="margin-top: 20px;">
+                        <div class="level-item">
+                            <div>
+                                <a href="https://pingstack.io/app/register">
+                                    <button class="button" style="margin-top: 10px; background-color: #25c151; color: white; font-weight: bold; text-transform: uppercase;">
+                                        Start free trial
+                                    </button>
+                                </a>
+
+                                <p style="text-align: center; font-size: 12px; margin-top: 5px;">
+                                    No credit card required
+                                </p>
+                            </div>
+                        </div>
+                    </nav>
+                </div>
+            </div>
+
+            <div class="column is-3">
+
+                <div style="padding: 10px 10px 10px 10px; border: 1px solid gray; border-radius: 5px;">
+
+                    <nav class="level">
+                        <div class="level-item">
+                            <p style="text-align: center; font-weight: bold; color: #2d3436">STARTER PLAN</p>
+                        </div>
+                    </nav>
+
+                    <nav class="level">
+
+                        <div class="level-item">
+                            <p style="text-align: center; font-size: 28px; font-weight: bold; color: #25c151">
+                                $9 <span style="color: gray; font-weight: normal; font-size: 20px;">/month</span>
+                            </p>
+                        </div>
+                    </nav>
+
+                    <p style="text-align: center; font-size: 18px;">
+                        20 monitors<br>
+                        10 users<br>
+                        75 SMS credits<br>
+                        Webhook integration<br>
+                    </p>
+
+                    <nav class="level" style="margin-top: 20px;">
+                        <div class="level-item">
+                            <div>
+                                <a href="https://pingstack.io/app/register">
+                                    <button class="button" style="margin-top: 10px; background-color: #25c151; color: white; font-weight: bold; text-transform: uppercase;">
+                                        Start free trial
+                                    </button>
+                                </a>
+
+                                <p style="text-align: center; font-size: 12px; margin-top: 5px;">
+                                    No credit card required
+                                </p>
+                            </div>
+                        </div>
+                    </nav>
+                </div>
+            </div>
+
+            <div class="column is-3">
+
+                <div style="padding: 10px 10px 10px 10px; border: 1px solid gray; border-radius: 5px;">
+                    <nav class="level">
+                        <div class="level-item">
+                            <p style="text-align: center; font-weight: bold; color: #2d3436;">PRO PLAN</p>
+                        </div>
+                    </nav>
+
+                    <nav class="level">
+                        <div class="level-item">
+                            <p style="text-align: center; font-size: 28px; font-weight: bold;color: #25c151">
+                                $29 <span style="color: gray; font-weight: normal; font-size: 20px;">/month</span>
+                            </p>
+                        </div>
+                    </nav>
+
+                    <p style="text-align: center; font-size: 18px;">
+                        50 monitors<br>
+                        20 users<br>
+                        200 SMS credits<br>
+                        Webhook integration<br>
+                    </p>
+
+                    <nav class="level" style="margin-top: 20px;">
+                        <div class="level-item">
+                            <div>
+                                <a href="https://pingstack.io/app/register">
+                                    <button class="button" style="margin-top: 10px; background-color: #25c151; color: white; font-weight: bold; text-transform: uppercase;">
+                                        Start free trial
+                                    </button>
+                                </a>
+
+                                <p style="text-align: center; font-size: 12px; margin-top: 5px;">
+                                    No credit card required
+                                </p>
+                            </div>
+                        </div>
+                    </nav>
+                </div>
+            </div>
+
+            <div class="column is-3">
+
+                <div style="padding: 10px 10px 10px 10px; border: 1px solid gray; border-radius: 5px;">
+                    <nav class="level">
+                        <div class="level-item">
+                            <p style="text-align: center; font-weight: bold; color: #2d3436;">BUSINESS PLAN</p>
+                        </div>
+                    </nav>
+
+                    <nav class="level">
+                        <div class="level-item">
+                            <p style="text-align: center; font-size: 28px; font-weight: bold; color: #25c151">
+                                $49 <span style="color: gray; font-weight: normal; font-size: 20px;">/month</span>
+                            </p>
+                        </div>
+                    </nav>
+
+                    <p style="text-align: center; font-size: 18px;">
+                        100 monitors<br>
+                        30 users<br>
+                        300 SMS credits<br>
+                        Webhook integration<br>
+                    </p>
+
+                    <nav class="level" style="margin-top: 20px;">
+                        <div class="level-item">
+                            <div>
+                                <a href="https://pingstack.io/app/register">
+                                    <button class="button" style="margin-top: 10px; background-color: #25c151; color: white; font-weight: bold; text-transform: uppercase;">
+                                        Start free trial
+                                    </button>
+                                </a>
+
+                                <p style="text-align: center; font-size: 12px; margin-top: 5px;">
+                                    No credit card required
+                                </p>
+                            </div>
+                        </div>
+                    </nav>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+
+<section class"container"> 
+<div class="hero-body"> 
 <div class="columns features"> 
 <div class="column is-4"> 
 <div class="card is-shady"> 
