--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,6 +5,9 @@
 @import "jobs";
 @import "stripe";
 
+h1 {
+  font-family: 'Bungee', cursive;
+}
 .has-background-cloud {
   background-color: hsl(0, 0%, 95%);
 }
@@ -46,7 +49,7 @@
   box-shadow: none;
   border-left: 1px solid #D3D3D3;
   border-right: 1px solid #D3D3D3;
-  border-bottom: 1px solid #D3D3D3;
+  border-bottom: 2px solid #D3D3D3;
 }
 .list {
   border-radius: 0;
