--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -94,7 +94,7 @@
                         Jobpify
                     </h1>
                     <h3 class="subtitle is-3 has-text-left">
-                        Nền tảng kết nối học sinh, sinh viên với các cơ hội việc làm.
+                        Nền tảng kết nối <mark>học sinh, sinh viên</mark> với các cơ hội việc làm.
                     </h3>
                     <a class="button is-medium is-link" href="/jobs">
                             <strong>
@@ -121,12 +121,13 @@
                 </div>
                 <div class="column is-5">
                     <h3 class="title is-3">
-                        Câu hỏi gì đó liên quan tới vấn đề tìm việc làm ở học sinh, sinh viên?
+                        Bạn là học sinh, sinh viên và đang tìm kiếm việc làm?
                     </h3>
                     <p></p>
                     <h4 class="subtitle is-4">
-                        Blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah 
-                        blah blah blah blah blah blah blah blah blah.
+                        Jobpify là nơi hoản hảo cho bạn. Là nền tảng được xây dựng với mục đích giúp học sinh, sinh viên nhanh chóng tìm được việc làm
+                        từ các nhà tuyển dụng lớn nhỏ khắp cả nước.
+                        
                     </h4>
                 </div>
             </div>
@@ -148,7 +149,7 @@
 
                     <nav class="level">
                         <div class="level-item">
-                            <p style="text-align: center; font-weight: bold; color: #2d3436">FREE PLAN</p>
+                            <p style="text-align: center; font-weight: bold; color: #2d3436">Học sinh, sinh viên</p>
                         </div>
                     </nav>
 
@@ -170,10 +171,10 @@
 
                     <nav class="level" style="margin-top: 20px;">
                         <div class="level-item">
-                            <div>
+                            <div class="has-text-centered">
                                 <a href="https://pingstack.io/app/register">
                                     <button class="button" style="margin-top: 10px; background-color: #25c151; color: white; font-weight: bold; text-transform: uppercase;">
-                                        Start free trial
+                                        Chọn
                                     </button>
                                 </a>
 
@@ -192,7 +193,7 @@
 
                     <nav class="level">
                         <div class="level-item">
-                            <p style="text-align: center; font-weight: bold; color: #2d3436">STARTER PLAN</p>
+                            <p style="text-align: center; font-weight: bold; color: #2d3436">Học sinh, sinh viên Pro</p>
                         </div>
                     </nav>
 
@@ -214,10 +215,10 @@
 
                     <nav class="level" style="margin-top: 20px;">
                         <div class="level-item">
-                            <div>
+                            <div class="has-text-centered">
                                 <a href="https://pingstack.io/app/register">
                                     <button class="button" style="margin-top: 10px; background-color: #25c151; color: white; font-weight: bold; text-transform: uppercase;">
-                                        Start free trial
+                                        Chọn
                                     </button>
                                 </a>
 
@@ -235,14 +236,14 @@
                 <div style="padding: 10px 10px 10px 10px; border: 1px solid gray; border-radius: 5px;">
                     <nav class="level">
                         <div class="level-item">
-                            <p style="text-align: center; font-weight: bold; color: #2d3436;">PRO PLAN</p>
+                            <p style="text-align: center; font-weight: bold; color: #2d3436;">Nhà tuyển dụng</p>
                         </div>
                     </nav>
 
                     <nav class="level">
                         <div class="level-item">
                             <p style="text-align: center; font-size: 28px; font-weight: bold;color: #25c151">
-                                $29 <span style="color: gray; font-weight: normal; font-size: 20px;">/month</span>
+                                $0 <span style="color: gray; font-weight: normal; font-size: 20px;">/month</span>
                             </p>
                         </div>
                     </nav>
@@ -256,10 +257,10 @@
 
                     <nav class="level" style="margin-top: 20px;">
                         <div class="level-item">
-                            <div>
+                            <div class="has-text-centered">
                                 <a href="https://pingstack.io/app/register">
                                     <button class="button" style="margin-top: 10px; background-color: #25c151; color: white; font-weight: bold; text-transform: uppercase;">
-                                        Start free trial
+                                        Chọn
                                     </button>
                                 </a>
 
@@ -277,14 +278,14 @@
                 <div style="padding: 10px 10px 10px 10px; border: 1px solid gray; border-radius: 5px;">
                     <nav class="level">
                         <div class="level-item">
-                            <p style="text-align: center; font-weight: bold; color: #2d3436;">BUSINESS PLAN</p>
+                            <p style="text-align: center; font-weight: bold; color: #2d3436;">Nhà tuyển dụng Pro</p>
                         </div>
                     </nav>
 
                     <nav class="level">
                         <div class="level-item">
                             <p style="text-align: center; font-size: 28px; font-weight: bold; color: #25c151">
-                                $49 <span style="color: gray; font-weight: normal; font-size: 20px;">/month</span>
+                                $19 <span style="color: gray; font-weight: normal; font-size: 20px;">/month</span>
                             </p>
                         </div>
                     </nav>
@@ -298,10 +299,10 @@
 
                     <nav class="level" style="margin-top: 20px;">
                         <div class="level-item">
-                            <div>
+                            <div class="has-text-centered">
                                 <a href="https://pingstack.io/app/register">
                                     <button class="button" style="margin-top: 10px; background-color: #25c151; color: white; font-weight: bold; text-transform: uppercase;">
-                                        Start free trial
+                                        Chọn
                                     </button>
                                 </a>
 
