--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,11 +1,12 @@
 <div class="columns pt4 pb7 has-background-white">
+  
   <div class="column is-7 is-offset-1">
     <a class="button" href="/jobs/"><i class="fa fa-arrow-left"></i></a><br><br>
     <div class="box">
       <div id="div-to-print">
     <!--<p class="f7"><i class="fa fa-clock"></i> Được đăng <%= time_ago_in_words(@job.created_at) %> trước</p>-->
     <p class="f7"><i class="fa fa-clock"></i> Được đăng vào ngày <%= @job.created_at.strftime("%d-%m-%Y") %></p>
-    <h1 class="title is-2"><%= @job.title %></h1>
+    <h2 class="title is-2"><%= @job.title %></h2>
     <div class="panel">
       <!--<li class="inline-block f6 pr2"><span class="tag is-dark">Đại học</span></li>
       <li class="inline-block f6 pr2"><%= job_type(@job.job_type) %></li>-->
@@ -60,7 +61,8 @@
     </div>
   </div>
   </div>
-  <div class="column is-2 is-offset-1 has-text-centered" style="border:1px dashed #D3D3D3">
+  
+  <div class="column is-2 is-offset-1 has-text-centered" style="border:1px solid #D3D3D3">
     <% if !@job.avatar.file.nil? %>
       <%= link_to image_tag(@job.avatar_url(:thumb), alt: @job.job_author, class: "has-text-centered"), @job.url %>
     <% end %>
@@ -156,6 +158,7 @@
   </div>
   </div>
   <button class="modal-close is-large" aria-label="close" id="closeJobsModal"></button>
+</div>
 </div>
 <script type="text/javascript">
   $("#showModal").click(function() {
