--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <%= csrf_meta_tag %>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= stylesheet_link_tag 'https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css' %>
-    <%= stylesheet_link_tag 'application', 'https://fonts.googleapis.com/css?family=Bungee' %>
+    <%= stylesheet_link_tag 'application', 'https://fonts.googleapis.com/css?family=Bungee|Roboto' %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', "https://js.stripe.com/v2/", "https://js.stripe.com/v3/", 'data-turbolinks-track': 'reload' %>
     <%= tag :meta, name: "stripe-public-key", content: Figaro.env.stripe_publishable_key %>
@@ -87,21 +87,21 @@
           <div class="navbar-dropdown">
                   <a class="navbar-item" href="/jobs">
                     <p>
-                    <strong>Tìm việc làm</strong>
+                    <b>Tìm việc làm</b>
                     <br>
                     <small>Blah blah blah blah blah blah blah blah.</small>
                     </p>
                   </a>
                   <a class="navbar-item" href="/forum">
                     <p>
-                    <strong>Jobpify CV Maker</strong>
+                    <b>Jobpify CV Maker</b>
                     <br>
                     <small>Tạo hồ sơ xin việc online một cách dễ dàng.</small>
                     </p>
                   </a>
                   <a class="navbar-item" href="/jobpify-search">
                     <p>
-                    <strong>Jobpify Search</strong>
+                    <b>Jobpify Search</b>
                     <br>
                     <small>Cơ sở dữ liệu việc làm từ Internet. Cập nhật liên tục.</small>
                     </p>
